--- a/site/index.html
+++ b/site/index.html
@@ -71,15 +71,12 @@
 <!-- Header with full-height image -->
 <header class="bgimg-1 etpc-display-container etpc-greenscale-min" id="home">
   <div class="etpc-display-left etpc-text-white" style="padding:48px">
-    <span class="etpc-jumbo etpc-hide-small">Pegada Ecológica - FundaçãoCSN</span><br>
+    <span class="etpc-jumbo etpc-hide-small">Calcule sua Pegada Ecológica</span><br>
     <span class="etpc-xxlarge etpc-hide-large etpc-hide-medium"></span><br>
-    <span class="etpc-large">Calcule o seu consumo de recursos naturais.</span>
+    <span class="etpc-large">Veja o quanto você gasta de recursos naturais.</span>
     <p><span><a href="#work" class="etpc-button etpc-white etpc-padding-large etpc-large etpc-margin-top etpc-opacity etpc-hover-opacity-off">Aprenda sobre e começe hoje</a></span></p>
   </div> 
-  <div class="etpc-display-bottomleft etpc-text-white etpc-large" style="padding:24px 48px">
-    <a href="https://www.facebook.com/fundacaocsn" class="fa fa-facebook-official etpc-hover-opacity"></a>
-    <a href="https://www.instagram.com/fundacaocsn/"  class="fa fa-instagram etpc-hover-opacity"></a>
-  </div>
+
 </header>
 
 <!-- About Section -->
@@ -89,26 +86,26 @@
   <div class="etpc-row-padding etpc-center" style="margin-top:64px">
     <div class="etpc-quarter">
       <i class="etpc-margin-bottom etpc-jumbo etpc-center"></i>
-      <img src="Imagens/icons/Maozinha.png" style="width="100" height="100">
+      <img src="Imagens/icons/Maozinha.png" width="100" height="100">
       <b><p class="etpc-large">Conscientização</p></b>
       <p>Temos objetivo de conscientizar a população, diminuição o desperdicio de recursos naturais, reduzindo o impacto humano a terra e com essa ferramenta, buscamos mobilizar e incentivar as pessoas a repensar hábitos de consumo e a adotar práticas mais sustentáveis</p>
     </div>
     <div class="etpc-quarter">
       <i class="etpc-margin-bottom etpc-jumbo"></i>
-      <img src="Imagens/icons/Antivirus.png" style="width="100" height="100">
+      <img src="Imagens/icons/Antivirus.png" width="100" height="100">
       <b><p class="etpc-large">Importância</p></b>
       <p>Nossa Pegada Ecológica é uma ferramenta importante para trabalhar as questões ambientais, por meio da análise do consumo e de seus impactos sobre os recursos ambientais. Ela também traz informações importantes que possibilitam direcionar políticas públicas municipais, estaduais e federais.</p>
     </div>
     <div class="etpc-quarter">
       <i class="etpc-margin-bottom etpc-jumbo"></i>
-      <img src="Imagens/icons/Energia.png" style="width="100" height="100">
+      <img src="Imagens/icons/Energia.png" width="100" height="100">
       <b><p class="etpc-large">Energias Limpas</p></b>
       <p>Nossa preocupação com a preservação do ambiente, nos posiciona em um roll de defensores dos usos da energia limpa devido a crise de energias esgotáveis.
         As Energias limpas possui uma diferença entre a erergia renovável, onde exclui qualquer tipo de poluição que venha causar mudanças climáticas com o decorrer do tempo.</p>
     </div>
     <div class="etpc-quarter">
       <i class="etpc-margin-bottom etpc-jumbo"></i>
-      <img src="Imagens/icons/Reciclagem.png" style="width="100" height="100">
+      <img src="Imagens/icons/Reciclagem.png" width="100" height="100">
       <b><p class="etpc-large">Reciclagem</p></b>
       <p>Com o objetivo de minimizar o impacto ambiental é muito importante reciclar , reduzir e reutilizar. Além de economizar a extração de matéria prima da natureza, evitamos o desperdício dos recursos
         naturais.</p>
@@ -158,193 +155,13 @@
 <!-- Work Section -->
 
 <div class="etpc-container" style="padding:128px 16px" id="work">
-      <h3 class="etpc-center">NOSSO PROJETO</h3>
-      <p class="etpc-center etpc-large">O que estamos fazendo pelas pessoas</p>
+      <h3 class="etpc-center">Nosso Projeto</h3>
+      <p class="etpc-center etpc-large">Faça o quiz e descubra sua <b>Pegada Ecológica</b></p>
 
+      <!-- botão pra iniciar pesquisa na outra página -->
+      <p><span><a href="pesquisa.html" class="botaoIniciarPesquisa">Fazer a diferença</a></span></p>
 </div>
-  
-  <div class="etpc-forms" style="padding: 40px 16px">
-      <!--1° questao-->
-      <label>Com que frequência você come carne vermelha? <b>(1 porção= 70g (o equivalente a duas fatias de presunto))</b></label>
-      <div>
-      <form action="resultado.php" method="POST">
-        <select name="questao1" id="1543" style="width: 300px">
-          <option value="op1-a">Nunca</option>
-          <option value="op1-b">Com pouca frequência (três porções por semana)</option>
-          <option value="op1-c">Ocasionalmente (uma porção por dia)</option>
-          <option value="op1-d">Frequentemente (uma porção por dia no almoço e outra no
-            lanche da tarde ou jantar)</option>
-          <option value="op1-e">Sempre (duas ou mais porções por dia no almoço, no lanche
-            da tarde e no jantar)</option>
-        </select>
-      </div>
-      <!--2° questao-->
-      <label>Com que frequência você come peixe ou frutos do mar <b>(camarões,
-        caranguejos, ostras e mexilhões)</b>?</label>
-      <div>
-        <select name="questao2" id="1421" style="width: 300px">
-          <option value="op2-a">Nunca</option>
-          <option value="op2-b">Raramente (uma vez por semana ou menos)</option>
-          <option value="op2-c">Ocasionalmente (duas vezes por semana)</option>
-          <option value="op2-d">Frequentemente (uma vez por dia)</option>
-          <option value="op2-e">Sempre (em todas as refeições)</option>
-        </select>
-      </div>
 
-      <!--3° questao-->
-      <label>Você utiliza aparelhos de ar condicionado ou aquecedores em sua casa?</label>
-        <div>
-          <select name="questao3" id="5111" style="width: 300px">
-            <option value="op3-a">Não</option>
-            <option value="op3-b">Sim</option>
-          </select>
-        </div>
-
-        <!--4° questao-->
-        <label>Qual a procedência alimentos que você consome? </label>
-        <div>
-          <select name="questao4" id="5432" style="width: 300px">
-            <option value="op4-a">De minha própria horta e pomar ou de lojas de produtos
-              orgânicos ou feiras e quitandas</option>
-            <option value="op4-b">A maior parte de feiras, quitandas. Poucas vezes compro em
-              supermercados ou hipermercados</option>
-            <option value="op4-c">Normalmente em supermercados e poucas vezes
-              em feiras e quitandas</option>
-            <option value="op4-d">Sempre de supermercados e hipermercados</option>
-          </select>
-        </div>
-
-        <!--5° questao-->
-        <label>Quantas vezes por ano você compra sapatos e roupas novas?</label>
-        <div>
-          <select name="questao5" id="431" style="width: 300px">
-            <option value="op5-a">Uma vez por ano</option>
-            <option value="op5-b">Duas vezes por ano</option>
-            <option value="op5-c">Três vezes por ano</option>
-            <option value="op5-d">Uma vez por mês</option>
-            <option value="op5-e">Mais de uma vez por mês</option>
-          </select>
-        </div>
-
-        <!--6° questao-->
-        <label>Com que frequência você ou sua família compra eletrodomésticos
-          e equipamentos eletrônicos <b>(televisores, computadores, aparelhos
-          celulares etc)</b>?</label>
-        <div>
-          <select name="questao6" id="5111" style="width: 300px">
-            <option value="op6-a">somente quando quebram e precisam ser substituídos</option>
-            <option value="op6-b">ocasionalmente troco por versões mais modernas</option>
-            <option value="op6-c">troco sempre por aparelhos mais modernos</option>
-          </select>
-        </div>
-
-        <!--7° questao-->
-        <label>Com que frequência você compra jornais, revistas e livros?</label>
-        <div>
-          <select name="questao7" id="5111" style="width: 300px">
-            <option value="op7-a">Normalmente leio noticiários pela internet ou compro livros e
-              revistas impressos em papel reciclado</option>
-            <option value="op7-b">Tenho assinatura mensal de uma revista ou jornal e
-              ocasionalmente compro algum livro</option>
-            <option value="op7-c">Tenho assinatura semanal de uma revista e
-              compro livros ocasionalmente</option>
-            <option value="op7-d">Recebo diariamente jornal e compro
-              livros e revistas com frequência</option>
-          </select>
-        </div>
-        
-        <!--8° questao-->
-        <label>Como você descarta o lixo produzido em sua casa?</label>
-        <div>
-          <select name="questao8" id="5111" style="width: 300px">
-            <option value="op8-a">Não me preocupo em separar o lixo</option>
-            <option value="op8-b">Em duas lixeiras, uma para recicláveis e outra para
-              não recicláveis. Não me preocupo com a separação
-              de pilhas e baterias</option>
-            <option value="op8-c">Em duas lixeiras, uma para recicláveis e outra para não
-              recicláveis. Pilhas, baterias, materiais eletrônicos e lâmpadas
-              são encaminhadas a postos de recolhimento (em bancos,
-              farmácias, empresas de telefonia e outros postos de coleta)</option>
-            <option value="op8-d">Em uma única lixeira, pois não existe coleta seletiva no meu
-              bairro/cidade</option>
-          </select>
-        </div>
-
-        <!--9° questao-->
-        <label>Usa lâmpadas econômicas <b>(fluorescentes e LED)</b>?</label>
-        <div>
-          <select name="questao9" id="5111" style="width: 300px">
-            <option value="op9-a">Não uso</option>
-            <option value="op9-b">1/4 das lâmpadas são econômicas</option>
-            <option value="op9-c">Metade das lâmpadas que uso são econômicas</option>
-            <option value="op9-d">Todas as lâmpadas que uso são econômicas</option>
-          </select>
-        </div>
-
-        <!--10° questao-->
-        <label>Que meio de transporte você usa com mais frequência?</label>
-        <div>
-          <select name="questao10" id="5111" style="width: 300px">
-            <option value="op10-a">Carro</option>
-            <option value="op10-b">Bicicleta ou normalmente me locomovo a pé</option>
-            <option value="op10-c">Transporte público (ônibus, trem, metrô)</option>
-            <option value="op10-d">Carro, mas procuro fazer os percursos curtos a pé ou de bicicleta</option>
-          </select>
-        </div>
-
-        <!--11° questao-->
-        <label>Você consome refrigerantes com que frequência?</label>
-        <div>
-          <select name="questao11" id="5111" style="width: 300px">
-            <option value="op11-a">Nunca</option>
-            <option value="op11-b">Raramente (uma vez por semana ou menos)</option>
-            <option value="op11-c">Ocasionalmente (três vezes por semana)</option>
-            <option value="op11-d">Frequentemente (uma vez por dia ou mais)</option>
-          </select>
-        </div>
-
-        <!--12° questao-->
-        <label>Quanto tempo você gasta no banho diário?
-          <b>(somando o tempo gasto em todos os banhos que
-          você toma em um dia).</b></label>
-        <div>
-          <select name="questao12" id="5111" style="width: 300px">
-            <option value="op12-a">acima de 26min</option>
-            <option value="op12-b">de 16 a 25min</option>
-            <option value="op12-c">de 5 a 15min</option>
-          </select>
-        </div>
-
-        <!--13° questao-->
-        <label>Quantas horas aproximadamente você gasta viajando de avião por ano?</label>
-        <div>
-          <select name="questao13" id="5111" style="width: 300px">
-            <option value="op13-a">Nunca viajo</option>
-            <option value="op13-b">0 a 4 horas</option>
-            <option value="op13-c">4 a 10 horas</option>
-            <option value="op13-d">10 a 25 horas</option>
-            <option value="op13-e">Mais de 25 horas</option>
-          </select>
-        </div>
-
-        <!--14° questao-->
-        <label>Que quantidade você consome de alimentos <b>(barras de chocolate,
-          doces)</b> que contém açúcar refinado? <b>(Uma barra de chocolate
-          possui aproximadamente 100 mg)</b>.</label>
-        <div>
-          <select name="questao14" id="5111" style="width: 300px">
-            <option value="op14-a">Menos de 100 g por semana </option>
-            <option value="op14-b">Mais de 100g por semana</option>
-            <option value="op14-c">Nunca consumo produtos açucarados</option>
-          </select>
-        </div>
-        <br>
-        <input type="submit" value="Enviar">
-      </form>
-
-        <br>
-
-  </div>     
 
 <!-- Modal for full size images on click-->
 <div id="modal01" class="etpc-modal etpc-black" onclick="this.style.display='none'">
@@ -357,7 +174,7 @@
 
 
     <!-- Image of location/map -->
-    <img src="imagens/pegadaFin.jpg" class="etpc-image etpc-greenscale" style="width:100%;margin-top:48px">
+    <img src="imagens/pegadaFin.jpg" class="etpc-image etpc-greenscale" style="width:100%;margin-top:48px;">
   </div>
 </div>
 
