--- a/site/index.html
+++ b/site/index.html
@@ -145,6 +145,16 @@
           <p>Batizada em 1961 como Fundação General Edmundo de Macedo Soares e Silva, tendo sua primeira sede em Congonhas (MG) e atuação voltada para educação e capacitação profissional, foi a partir da mudança para Volta Redonda (RJ), em 1991, que a ampliamos nossa atuação, abrangendo áreas como esporte, saúde e cultura.</p>
         </div>
       </div>
+      <div class="etpc-card" style="margin-top: 5vh;">
+        <img src="Imagens/inpe.png" alt="PEIA" style="width:100%">
+        <div class="etpc-container" style="height: 70vh;">
+          <h4>INPE</h4>
+          <p class="etpc-opacity">Créditos</p>
+          <p>Nossa pesquisa foi inteiramente baseada no quiz da INPE. Agradecemos muito.</p>
+          <p>Você pode acessar o quiz original por: <a style="color: blue;"href="http://www.inpe.br/noticias/arquivos/pdf/Cartilha%20-%20Pegada%20Ecologica%20-%20web.pdf"><u>aqui</u></a></p>
+          <p>O Instituto Nacional de Pesquisas Espaciais foi criado em 1961 com o objetivo de impulsionar o país nas pesquisas cientificas e nas tecnologias espaciais. Suas atividades se ampliaram e a importância dos estudos vão desde assuntos complexos sobre a origem do Universo a aplicações de ciências como nas questões de desflorestamento das nossas matas.</p>
+        </div>
+      </div>
     </div>
     <div class="etpc-col l3 m6 etpc-margin-bottom">
       <div class="etpc-card">
