--- a/site/index.html
+++ b/site/index.html
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="etpc-card" style="margin-top: 5vh;">
-        <img src="Imagens/inpe.png" alt="PEIA" style="width:100%">
+        <img src="Imagens/images.png" alt="PEIA" style="width:100%">
         <div class="etpc-container" style="height: 70vh;">
           <h4>INPE</h4>
           <p class="etpc-opacity">Créditos</p>
