--- a/site/quiz.html
+++ b/site/quiz.html
@@ -5,10 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="pesquisa.css">
 </head>
 <body>
 	<div class="panel">
-		<div id="question">
+		<div id="question" class="perguntas">
 			Pergunta vem aqui.
 		</div>
 		<div class="opcoes">
@@ -25,7 +26,7 @@
 		<div class="navigacao">
 			<button id="prev">Anterior</button>
 			<button id="next">Próximo</button>
-			<button id="finalizar">Finalizar</button>
+			<button id="finalizar" class="enviarPesquisa">Finalizar</button>
 		</div>
 	</div>
 	<script src="script.js"></script>
