--- a/site/index.html
+++ b/site/index.html
@@ -176,7 +176,7 @@
       <p class="etpc-center etpc-large">Faça o quiz e descubra sua <b>Pegada Ecológica</b></p>
 
       <!-- botão pra iniciar pesquisa na outra página -->
-      <p><span><a href="pesquisa.html" class="botaoIniciarPesquisa">Fazer a diferença</a></span></p>
+      <p><span><a href="quiz.html" class="botaoIniciarPesquisa">Fazer a diferença</a></span></p>
 </div>
 
 
