--- a/site/quiz.html
+++ b/site/quiz.html
@@ -5,10 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="pesquisa.css">
+	<link rel="stylesheet" href="quiz.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="panel">
+	<div class="painel">
 		<div id="question" class="perguntas">
 			Pergunta vem aqui.
 		</div>
@@ -23,7 +29,7 @@
 
             <button class="option" id="op5">opção5</button>
 		</div>
-		<div class="navigacao">
+		<div class="navegacao">
 			<button id="prev">Anterior</button>
 			<button id="next">Próximo</button>
 			<button id="finalizar" class="enviarPesquisa">Finalizar</button>
