--- a/site/quiz.html
+++ b/site/quiz.html
@@ -35,6 +35,6 @@
 			<button id="finalizar" class="enviarPesquisa">Finalizar</button>
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="quiz.js"></script>
 </body>
 </html>
