--- a/site/quiz.html
+++ b/site/quiz.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="quizbg.css">
 	<link rel="stylesheet" href="quiz.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
+<div class="bg">
 <body>
 	<div class="painel">
 		<div id="question" class="perguntas">
@@ -37,4 +38,5 @@
 	</div>
 	<script src="quiz.js"></script>
 </body>
+</div>
 </html>
