--- a/site/quiz.html
+++ b/site/quiz.html
@@ -16,7 +16,7 @@
 <div class="bg">
 <body>
 	<div class="painel">
-		<div id="question" class="perguntas">
+		<div id="question" class="perguntas" id="opcoesid">
 			Pergunta vem aqui.
 		</div>
 		<div class="opcoes">
