--- a/site/quiz.html
+++ b/site/quiz.html
@@ -16,10 +16,10 @@
 <div class="bg">
 <body>
 	<div class="painel">
-		<div id="question" class="perguntas" id="opcoesid">
+		<div id="question" class="perguntas" >
 			Pergunta vem aqui.
 		</div>
-		<div class="opcoes">
+		<div class="opcoes" id="opcoesid">
 			<button class="option" id="op1" >opção1</button>
 	
 			<button class="option" id="op2" >opção2</button>
