--- a/site/index.html
+++ b/site/index.html
@@ -132,7 +132,7 @@
         <div class="etpc-container" style="height: 410px;">
           <h4>Programa Educação Ambiental</h4>
           <p class="etpc-opacity">Colaboradores</p>
-          <p>O Programa de Educação Ambiental - PEA tem o objetivo de propor ações de educação ambiental junto à população moradora da área de influência do empreendimento, visando aumentar o nível de conhecimento e proteção ambiental de ecossistemas regionais, assim como maximizar os benefícios socioambientais necessários à conservação, proteção e preservação ambiental.</p>
+          <p>Temos o objetivo de promover a educação ambiental junto à população. Visando o conhecimento ecológico necessário para a proteção e preservação ambiental.</p>
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@
         <div class="etpc-container" style="height: 410px;">
           <h4>Fundação CSN</h4>
           <p class="etpc-opacity">Cordenadores</p>
-          <p>Batizada em 1961 como Fundação General Edmundo de Macedo Soares e Silva, tendo sua primeira sede em Congonhas (MG) e atuação voltada para educação e capacitação profissional, foi a partir da mudança para Volta Redonda (RJ), em 1991, que a ampliamos nossa atuação, abrangendo áreas como esporte, saúde e cultura.</p>
+          <p>Somos responsáveis pelas ações sociais do Grupo CSN e estamos presentes nas principais cidades em que a empresa atua. Os pilares que sustentam a nossa atuação são educação, cultura, articulação e curadoria.</p>
         </div>
       </div>
       <div class="etpc-card" style="margin-top: 5vh;">
@@ -152,7 +152,7 @@
           <p class="etpc-opacity">Créditos</p>
           <p>Nossa pesquisa foi inteiramente baseada no quiz da INPE. Agradecemos muito.</p>
           <p>Você pode acessar o quiz original por: <a style="color: blue;"href="http://www.inpe.br/noticias/arquivos/pdf/Cartilha%20-%20Pegada%20Ecologica%20-%20web.pdf"><u>aqui</u></a></p>
-          <p>O Instituto Nacional de Pesquisas Espaciais foi criado em 1961 com o objetivo de impulsionar o país nas pesquisas cientificas e nas tecnologias espaciais. Suas atividades se ampliaram e a importância dos estudos vão desde assuntos complexos sobre a origem do Universo a aplicações de ciências como nas questões de desflorestamento das nossas matas.</p>
+          <p>Criada em 1961 com o objetivo de impulsionar o país nas pesquisas cientificas e nas tecnologias espaciais. Suas atividades se ampliaram e a importância dos estudos vão desde assuntos complexos sobre a origem do Universo até as questões de desflorestamento das nossas matas.</p>
         </div>
       </div>
     </div>
@@ -162,7 +162,7 @@
         <div class="etpc-container" style="height: 410px;">
           <h4>Escola Técnica Pandiá Calógeras</h4>
           <p class="etpc-opacity">Desenvolvedores</p>
-          <p>A Escola Técnica Pandiá Calógeras — ETPC, fundada em 19 de abril de 1944 com a intenção de oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional e aos seus filhos, é referência nacional em educação para o trabalho, pela excelência de seu processo ensino-aprendizagem, atualização tecnológica e investimento social.</p>
+          <p>Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional e aos seus filhos, é referência nacional em educação para o trabalho, pela excelência de seu processo ensino-aprendizagem, atualização tecnológica e investimento social.</p>
         </div>
       </div>
     </div>
