--- a/site/index.html
+++ b/site/index.html
@@ -95,27 +95,25 @@
       <i class="etpc-margin-bottom etpc-jumbo etpc-center"></i>
       <img src="Imagens/icons/Maozinha.png" width="100" height="100">
       <b><p class="etpc-large">Conscientização</p></b>
-      <p>Temos objetivo de conscientizar a população, diminuição o desperdicio de recursos naturais, reduzindo o impacto humano a terra e com essa ferramenta, buscamos mobilizar e incentivar as pessoas a repensar hábitos de consumo e a adotar práticas mais sustentáveis</p>
+      <p style="text-align: left;">Com o objetivo de conscientizar, fazemos com que as pessoas repensem seus hábitos.</p>
     </div>
     <div class="etpc-quarter">
       <i class="etpc-margin-bottom etpc-jumbo"></i>
       <img src="Imagens/icons/Antivirus.png" width="100" height="100">
       <b><p class="etpc-large">Importância</p></b>
-      <p>Nossa Pegada Ecológica é uma ferramenta importante para trabalhar as questões ambientais, por meio da análise do consumo e de seus impactos sobre os recursos ambientais. Ela também traz informações importantes que possibilitam direcionar políticas públicas municipais, estaduais e federais.</p>
+      <p style="text-align: left;">Reforçamos as pautas ambientais através do nosso projeto. Realizando um levantamento geral que pode ser usado futuramente em políticas públicas.</p>
     </div>
     <div class="etpc-quarter">
       <i class="etpc-margin-bottom etpc-jumbo"></i>
       <img src="Imagens/icons/Energia.png" width="100" height="100">
       <b><p class="etpc-large">Energias Limpas</p></b>
-      <p>Nossa preocupação com a preservação do ambiente, nos posiciona em um roll de defensores dos usos da energia limpa devido a crise de energias esgotáveis.
-        As Energias limpas possui uma diferença entre a erergia renovável, onde exclui qualquer tipo de poluição que venha causar mudanças climáticas com o decorrer do tempo.</p>
+      <p style="text-align: left;">Somos defensores do uso da energia limpa devido à crise energética atual. A energia limpa é diferente da renovável. Pois tem a capacidade de realizar sua função com impacto reduzido.</p>
     </div>
     <div class="etpc-quarter">
       <i class="etpc-margin-bottom etpc-jumbo"></i>
       <img src="Imagens/icons/Reciclagem.png" width="100" height="100">
       <b><p class="etpc-large">Reciclagem</p></b>
-      <p>Com o objetivo de minimizar o impacto ambiental é muito importante reciclar , reduzir e reutilizar. Além de economizar a extração de matéria prima da natureza, evitamos o desperdício dos recursos
-        naturais.</p>
+      <p style="text-align: left;">Para reduzir o impacto ambiental, é muito importante entender os 3Rs da sustentabilidade: reciclar , reduzir e reutilizar. Além de economizar a extração de matéria prima da natureza, evitamos o desperdício dos recursos naturais.</p>
     </div>
   </div>
 </div>
@@ -147,7 +145,7 @@
       </div>
       <div class="etpc-card" style="margin-top: 5vh;">
         <img src="Imagens/images.png" alt="PEIA" style="width:100%">
-        <div class="etpc-container" style="height: 70vh;">
+        <div class="etpc-container" style="height: 86vh;">
           <h4>INPE</h4>
           <p class="etpc-opacity">Créditos</p>
           <p>Nossa pesquisa foi inteiramente baseada no quiz da INPE. Agradecemos muito.</p>
