--- a/site/quiz.html
+++ b/site/quiz.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="quizbg.css">
+	<title>Quiz</title>
+	<link rel="icon" href="Imagens/interrogacao.png">
 	<link rel="stylesheet" href="quiz.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
