--- a/site/index.html
+++ b/site/index.html
@@ -119,7 +119,7 @@
 </div>
 
 
-<!-- Team Section -->
+<!-- Equipe -->
 <div class="etpc-container" style="padding: 20px 16px" id="team">
   <h3 class="etpc-center">NOSSA EQUIPE</h3>
   <p class="etpc-center etpc-large">Todos que participaram deste projeto</p>
@@ -163,6 +163,50 @@
           <p>Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional e aos seus filhos, é referência nacional em educação para o trabalho, pela excelência de seu processo ensino-aprendizagem, atualização tecnológica e investimento social.</p>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+<!-- Equipe -->
+<div class="mySlides">
+  <div class="etpc-card">
+    <img src="Imagens/PEA.jpg" class="imagens">
+    <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
+      <h4>Programa Educação Ambiental</h4>
+      <p class="etpc-opacity">Colaboradores</p>
+      <p>Temos o objetivo de promover a educação ambiental junto à população. Visando o conhecimento ecológico necessário para a proteção e preservação ambiental.</p>
+    </div>
+  </div>
+</div>
+<div class="mySlides">
+  <div class="etpc-card">
+    <img src="imagens/Logo fundacao.png" alt="Fun" class="imagens">
+    <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
+      <h4>Fundação CSN</h4>
+      <p class="etpc-opacity">Cordenadores</p>
+      <p>Somos responsáveis pelas ações sociais do Grupo CSN e estamos presentes nas principais cidades em que a empresa atua. Os pilares que sustentam a nossa atuação são educação, cultura, articulação e curadoria.</p>
+    </div>
+  </div>
+</div>
+<div class="mySlides">
+  <div class="etpc-card" >
+    <img src="Imagens/images.png" alt="INPE" class="imagens">
+    <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
+      <h4>INPE</h4>
+      <p class="etpc-opacity">Créditos</p>
+      <p>Nossa pesquisa foi inteiramente baseada no quiz da INPE. Agradecemos muito.</p>
+      <p>Você pode acessar o quiz original por: <a style="color: blue;"href="http://www.inpe.br/noticias/arquivos/pdf/Cartilha%20-%20Pegada%20Ecologica%20-%20web.pdf"><u>aqui</u></a></p>
+      <p>Criada em 1961 com o objetivo de impulsionar o país nas pesquisas cientificas e nas tecnologias espaciais. Suas atividades se ampliaram e a importância dos estudos vão desde assuntos complexos sobre a origem do Universo até as questões de desflorestamento das nossas matas.</p>
+    </div>
+  </div>
+</div>
+<div class="mySlides">
+  <div class="etpc-card">
+    <img src="imagens/etpc.png" alt="Etpc" class="imagens">
+    <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
+        <h4>Escola Técnica Pandiá Calógeras</h4>
+        <p class="etpc-opacity">Desenvolvedores</p>
+        <p>Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional e aos seus filhos, é referência nacional em educação para o trabalho, pela excelência de seu processo ensino-aprendizagem, atualização tecnológica e investimento social.</p>
     </div>
   </div>
 </div>
@@ -228,7 +272,7 @@ function etpc_close() {
     mySidebar.style.display = "none";
 }
 </script>
-
+<script src="carrousel.js"></script>
 
 </body>
 </html>
