--- a/site/index.html
+++ b/site/index.html
@@ -48,7 +48,7 @@
     <link rel="icon" href="Imagens/Logosite.png">
   </head>
 <body>
-
+<script src="carrousel.js"></script>
 <!-- Navbar (sit on top) -->
 <div class="etpc-top">
   <div class="etpc-bar etpc-white etpc-card" id="myNavbar">
@@ -117,8 +117,25 @@
     </div>
   </div>
 </div>
-
-<!-- Equipe -->
+<!--Equipe-->
+<div class="etpc-container" style="padding: 20px 16px" id="team">
+  <h3 class="etpc-center">NOSSA EQUIPE</h3>
+  <p class="etpc-center etpc-large">Todos que participaram deste projeto</p>
+  <div class="etpc-row-padding " style="margin-top:64px">
+    <div class="mySlides">
+      <div class="etpc-card">
+        <img id="imagem" src="Imagens/PEA.jpg">
+        <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
+          <h4 id="nome_organização">nnn</h4>
+          <p class="etpc-opacity" id="funcionalidade"></p>
+          <p id="texto_equipe"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<button type="button" onclick="passar_pagina()">passar</button>
+<!-- Equipe 
 <div class="etpc-container" style="padding: 20px 16px" id="team">
   <h3 class="etpc-center">NOSSA EQUIPE</h3>
   <p class="etpc-center etpc-large">Todos que participaram deste projeto</p>
@@ -155,18 +172,19 @@
         </div>
       </div>
     </div>
-  <div class="mySlides">
-    <div class="etpc-card">
-      <img src="imagens/etpc.png" alt="Etpc" class="imagens">
-      <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
-          <h4>Escola Técnica Pandiá Calógeras</h4>
-          <p class="etpc-opacity">Desenvolvedores</p>
-          <p>Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional e aos seus filhos, é referência nacional em educação para o trabalho, pela excelência de seu processo ensino-aprendizagem, atualização tecnológica e investimento social.</p>
+    <div class="mySlides">
+      <div class="etpc-card">
+        <img src="imagens/etpc.png" alt="Etpc" class="imagens">
+        <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
+            <h4>Escola Técnica Pandiá Calógeras</h4>
+            <p class="etpc-opacity">Desenvolvedores</p>
+            <p>Fundada em 1944 visando oferecer ensino técnico aos primeiros empregados da Companhia Siderúrgica Nacional e aos seus filhos, é referência nacional em educação para o trabalho, pela excelência de seu processo ensino-aprendizagem, atualização tecnológica e investimento social.</p>
+        </div>
       </div>
     </div>
   </div>
-  </div>
 </div>
+-->
 <!-- Work Section -->
 
 <div class="etpc-container" style="padding:128px 16px" id="work">
@@ -228,7 +246,6 @@ function etpc_close() {
     mySidebar.style.display = "none";
 }
 </script>
-<script src="carrousel.js"></script>
 
 </body>
 </html>
