--- a/site/index.html
+++ b/site/index.html
@@ -7,20 +7,29 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    
     <style>
       body{
-        background-color: #EEE8AA
+        background-color: #DAFDBA;
+        /* background-color: #EEE8AA; */
       }
       body,h1,h2,h4,h5,h6 {
-        font-family: Super Renewables;
+        font-family: 'Cabin', sans-serif;
         font-size: 17px;
       }
       h3{
-        font-family: Papernotes;
+        font-family: 'Montserrat', sans-serif;
+
         font-size: 25px;
       }
       span,a{
-        font-family: Super Renewables;
+        font-family: 'Cabin', sans-serif;
       }
       body, html {
         height: 100%;
@@ -52,28 +61,18 @@
 <!-- Navbar (sit on top) -->
 <div class="etpc-top">
   <div class="etpc-bar etpc-white etpc-card" id="myNavbar">
-    <a href="#home" class="etpc-bar-item etpc-button etpc-wide">INICIO</a>
     <!-- Right-sided navbar links -->
     <div class="etpc-right etpc-hide-small">
-      <a href="#about" class="etpc-bar-item etpc-button">SOBRE</a>
-      <a href="#team" class="etpc-bar-item etpc-button"><i class="fa fa-user"></i> EQUIPE</a>
-      <a href="#work" class="etpc-bar-item etpc-button"><i class="fa fa-th"></i> PROJETO</a>
+      <a href="#about" class="etpc-bar-item etpc-button"><i class="fa fa-bars fa-fw"></i> Sobre</a>
+      <a href="#team" class="etpc-bar-item etpc-button"><i class="fa fa-user fa-fw"></i> Equipe</a>
+      <a href="#work" class="etpc-bar-item etpc-button"><i class="fa fa-th fa-fw"></i> Projeto</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
-    <a href="javascript:void(0)" class="etpc-bar-item etpc-button etpc-right etpc-hide-large etpc-hide-medium" onclick="etpc_open()">
-      <i class="fa fa-bars"></i>
-    </a>
+      
   </div>
 </div>
 
-<!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="etpc-sidebar etpc-bar-block etpc-black etpc-card etpc-animate-left etpc-hide-medium etpc-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="etpc_close()" class="etpc-bar-item etpc-button etpc-large etpc-padding-16">Close ×</a>
-  <a href="#about" onclick="etpc_close()" class="etpc-bar-item etpc-button">ABOUT</a>
-  <a href="#team" onclick="etpc_close()" class="etpc-bar-item etpc-button">TEAM</a>
-  <a href="#work" onclick="etpc_close()" class="etpc-bar-item etpc-button">WORK</a>
-</nav>
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 etpc-display-container etpc-greenscale-min" id="home">
@@ -88,7 +87,7 @@
 
 <!-- About Section -->
 <div class="etpc-container" style="padding:128px 16px" id="about">
-  <h3 class="etpc-center">SOBRE O PROJETO</h3>
+  <h3 class="etpc-center">Sobre o Projeto</h3>
   <p class="etpc-center etpc-large">Principais objetivos do projeto</p>
   <div class="etpc-row-padding etpc-center" style="margin-top:64px">
     <div class="etpc-quarter">
@@ -119,8 +118,7 @@
 </div>
 <!--Equipe-->
 <div class="etpc-container" style="padding: 20px 16px" id="team">
-  <h3 class="etpc-center">NOSSA EQUIPE</h3>
-  <p class="etpc-center etpc-large">Todos que participaram deste projeto</p>
+  <h3 class="etpc-center">Nossa Equipe</h3>
   <div class="etpc-row-padding " style="margin-top:64px">
     <div class="mySlides">
       <div class="etpc-card">
@@ -192,7 +190,7 @@
       <p class="etpc-center etpc-large">Faça o quiz e descubra sua <b>Pegada Ecológica</b></p>
 
       <!-- botão pra iniciar pesquisa na outra página -->
-      <p><span><a href="quiz.html" class="botaoIniciarPesquisa">Fazer a diferença</a></span></p>
+      <a href="quiz.html" id="botaoIniciarPesquisa">Iniciar Quiz</a>
 </div>
 
 
@@ -207,45 +205,17 @@
 
 
     <!-- Image of location/map -->
-    <img src="imagens/pegadaFin.jpg" class="etpc-image etpc-greenscale" style="width:100%;margin-top:48px;">
   </div>
 </div>
 
 <!-- Footer. This section contains an ad for etpcSchools Spaces. You can leave it to support us. -->
 <footer class="etpc-center etpc-black etpc-padding-64">
-  <a href="#home" class="etpc-button etpc-light-grey"><i class="fa fa-arrow-up etpc-margin-right"></i>Voltar para o inicio</a>
+  <a href="#home" class="etpc-button etpc-light-grey"><i class="fa fa-arrow-up etpc-margin-right"></i>Voltar para o início</a>
   <div class="etpc-xlarge etpc-section">
     <a href="https://www.facebook.com/fundacaocsn" class="fa fa-facebook-official etpc-hover-opacity"></a>
     <a href="https://www.instagram.com/fundacaocsn/" class="fa fa-instagram etpc-hover-opacity"></a>
   </div>
 </footer>
- 
-<script>
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-
-
-// Toggle between showing and hiding the sidebar when clicking the menu icon
-var mySidebar = document.getElementById("mySidebar");
-
-function etpc_open() {
-  if (mySidebar.style.display === 'block') {
-    mySidebar.style.display = 'none';
-  } else {
-    mySidebar.style.display = 'block';
-  }
-}
-
-// Close the sidebar with the close button
-function etpc_close() {
-    mySidebar.style.display = "none";
-}
-</script>
 
 </body>
 </html>
