--- a/site/index.html
+++ b/site/index.html
@@ -80,7 +80,7 @@
     <span class="etpc-jumbo etpc-hide-small">Calcule sua Pegada Ecológica</span><br>
     <span class="etpc-xxlarge etpc-hide-large etpc-hide-medium"></span><br>
     <span class="etpc-large">Veja o quanto você gasta de recursos naturais.</span>
-    <p><span><a href="#work" class="etpc-button etpc-white etpc-padding-large etpc-large etpc-margin-top etpc-opacity etpc-hover-opacity-off" style="border-radius: 8px; padding: 18% 7%;">Aprenda e Comece hoje</a></span></p>
+    <p><span><a href="#work" class="etpc-button etpc-white etpc-padding-large etpc-large etpc-margin-top etpc-opacity etpc-hover-opacity-off" style="border-radius: 8px; padding: 18% 7%;">Aprenda e comece hoje</a></span></p>
   </div> 
 
 </header>
