--- a/site/index.html
+++ b/site/index.html
@@ -121,9 +121,9 @@
   <div class="etpc-row-padding " style="margin-top:64px">
     <div class="mySlides">
       <div class="etpc-card">
-        <img id="imagem" src="Imagens/PEA.jpg">
+        <img id="imagem">
         <div class="etpc-container etpc-margin-bottom" style="height: 410px;">
-          <h4 id="nome_organização">nnn</h4>
+          <h4 id="nome_organização"></h4>
           <p class="etpc-opacity" id="funcionalidade"></p>
           <p id="texto_equipe"></p>
         </div>
